--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/7223597521.css" crossorigin="anonymous">
-    <title>FIRST SITE</title>
+    <title>CHAKIB DIBT</title>
 </head>
 
 <body>
