--- a/index.html
+++ b/index.html
@@ -134,5 +134,7 @@
         </section>
     </div>
 </body>
-
+<footer>
+    <button><a href="https://stazkun01.github.io/rest-of-maria/bdcard.html">⭐</a></button>
+    </footer>
 </html>
